# personal_projects

mir_teb_control_use_ros/common_package/obstacle_detection/: CMakeLists.txt  package.xml
mir_teb_control_use_ros/common_package/obstacle_detection/cfg/: obstacle_detection.cfg
mir_teb_control_use_ros/common_package/obstacle_detection/config/: real_param.yaml  sim_param.yaml
mir_teb_control_use_ros/common_package/obstacle_detection/include/obstacle_detection/: lib.h  obstacle_detection.h
mir_teb_control_use_ros/common_package/obstacle_detection/launch/: real_amcl.launch  real_obstacle_detection.launch  sim_obstacle_detection.launch
mir_teb_control_use_ros/common_package/obstacle_detection/msg/: ObstacleVertices.msg
mir_teb_control_use_ros/common_package/obstacle_detection/rviz/: real_rivz.rviz  sim_rviz.rviz
mir_teb_control_use_ros/common_package/obstacle_detection/src/: lib.cpp  main.cpp  obstacle_detection.cpp
mir_teb_control_use_ros/mir100/mir100_gazebo/: CMakeLists.txt  package.xml
mir_teb_control_use_ros/mir100/mir100_gazebo/config/: ekf.yaml
mir_teb_control_use_ros/mir100/mir100_gazebo/launch/: hospital_world.launch  mir_empty_world.launch  mir_gazebo_common.launch  obstacle_tracking.launch
mir_teb_control_use_ros/mir100/mir100_gazebo/launch/includes/: ekf.launch.xml  spawn_maze.launch.xml
mir_teb_control_use_ros/mir100/mir100_gazebo/rviz/: mir_description.rviz
mir_teb_control_use_ros/mir100/mir100_gazebo/worlds/: dynamic_world.world  dynamic_world_test.world  hospital.world  static_world.world  teb_world.world  world_15x15.world  world_test.world
mir_teb_control_use_ros/teb_control/teb_controller/: CMakeLists.txt  package.xml
mir_teb_control_use_ros/teb_control/teb_controller/config/: real_param.yaml  sim_param.yaml
mir_teb_control_use_ros/teb_control/teb_controller/include/teb_controller/common/: distance_calculations.h  misc.h  pose_se2.h  teb_config.h  ultis.h
mir_teb_control_use_ros/teb_control/teb_controller/include/teb_controller/g2o_types/: base_teb_edges.h  edge_acceleration.h  edge_dynamic_obstacle.h  edge_kinematics.h  edge_obstacle.h  edge_prefer_rotdir.h  edge_shortest_path.h  edge_time_optimal.h  edge_velocity.h  edge_velocity_obstacle_ratio.h  edge_via_point.h  vertex_pose.h  vertex_timediff.h
mir_teb_control_use_ros/teb_control/teb_controller/include/teb_controller/homotopy_class_planner/: graph_search.h  h_signature.h  homotopy_class_planner.h  homotopy_class_planner.hpp  planner_interface.h  timed_elastic_band.h  timed_elastic_band.hpp
mir_teb_control_use_ros/teb_control/teb_controller/launch/: amcl.launch  real_teb_controller.launch  sim_with_map.launch
mir_teb_control_use_ros/teb_control/teb_controller/src/: main.cpp
mir_teb_control_use_ros/teb_control/teb_controller/src/common/: cubic_spline.cpp  ultis.cpp
mir_teb_control_use_ros/teb_control/teb_controller/src/homotopy_class_planner/: graph_search.cpp  homotopy_class_planner.cpp  timed_elastic_band.cpp
mir_teb_control_use_ros/teb_control/teb_controller/src/obstacles/: obstacles.cpp
mir_teb_control_use_ros/teb_control/teb_controller/src/optimization/: optimal_planner.cpp
mir_teb_control_use_ros/teb_control/teb_controller/src/robot/: teb_controller.cpp  teb_ver2.cpp
multi_robot_navigation/: CMakeLists.txt  package.xml  setup.py
multi_robot_navigation/evaluate/circle_10/: robot_0.txt  robot_1.txt  robot_2.txt  robot_3.txt  robot_4.txt  robot_5.txt  robot_6.txt  robot_7.txt  robot_8.txt  robot_9.txt
multi_robot_navigation/evaluate/circle_15/: robot_0.txt  robot_1.txt  robot_10.txt  robot_11.txt  robot_12.txt  robot_13.txt  robot_14.txt  robot_2.txt  robot_3.txt  robot_4.txt  robot_5.txt  robot_6.txt  robot_7.txt  robot_8.txt  robot_9.txt
multi_robot_navigation/evaluate/circle_20/: robot_0.txt  robot_1.txt  robot_10.txt  robot_11.txt  robot_12.txt  robot_13.txt  robot_14.txt  robot_15.txt  robot_16.txt  robot_17.txt  robot_18.txt  robot_19.txt  robot_2.txt  robot_3.txt  robot_4.txt  robot_5.txt  robot_6.txt  robot_7.txt  robot_8.txt  robot_9.txt
multi_robot_navigation/evaluate/circle_5/: robot_0.txt  robot_1.txt  robot_2.txt  robot_3.txt  robot_4.txt
multi_robot_navigation/evaluate/multi_env/: robot_35.txt
multi_robot_navigation/goal_point/: circle_10.txt  circle_15.txt  circle_20.txt  circle_5.txt  multi_env.txt
multi_robot_navigation/init_pose/: circle_10.txt  circle_15.txt  circle_20.txt  circle_5.txt  stage2.txt  world_1_20.txt
multi_robot_navigation/launch/: circle.launch  circle_10.launch  circle_15.launch  circle_20.launch  circle_5.launch  multi_env.launch  stage2.launch  world_1_20.launch
multi_robot_navigation/src/: circle_test_10.py  circle_test_15.py  circle_test_20.py  circle_test_5.py  multi_env_test.py  report.py  stage_2_test.py  test.py
multi_robot_navigation/src/collision_avoidance/: agent.py  network.py  ppo.py  ultis.py
multi_robot_navigation/world/: circle.world  circle_10.world  circle_15.world  circle_20.world  circle_5.world  multi_env.world  stage2.world  world_1_20.world
multi_robot_navigation/world/create_world/: .$world.drawio.bkp  circle.py  multi_env.py  stage2.py  world.drawio  world_1.py
teb_simulation_in_webots/controllers/teb_controller/: CMakeLists.txt  teb_controller.cpp
teb_simulation_in_webots/controllers/teb_controller/include/robot/: robot.h
teb_simulation_in_webots/controllers/teb_controller/src/homotopy_class_planner/: graph_search.cpp
teb_simulation_in_webots/controllers/teb_controller/src/robot/: robot.cpp
teb_simulation_use_open_cv/: CMakeLists.txt
teb_simulation_use_open_cv/include/common/: misc.h  teb_config.h  ultis.h
teb_simulation_use_open_cv/include/obstacles/: obstacles.h  obstacles_ver2.h
teb_simulation_use_open_cv/include/robot/: robot.h  robot_model.h
teb_simulation_use_open_cv/map/: teb_map.pgm
teb_simulation_use_open_cv/src/: main.cpp
teb_simulation_use_open_cv/src/common/: ultis.cpp
teb_simulation_use_open_cv/src/obstacles/: obstacles.cpp  obstacles_ver2.cpp
teb_simulation_use_open_cv/src/robot/: robot.cpp  robot_model.cpp
(+223 files in other folders)
